src/bindings.rs

#[test]
fn bindgen_test_layout_pt_event__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<pt_event__bindgen_ty_1>(),
        24usize,
        concat!("Size of: ", stringify!(pt_event__bindgen_ty_1))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_event__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_event__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).enabled as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(enabled)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).disabled as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(disabled)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).async_disabled as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(async_disabled)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).async_branch as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(async_branch)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).paging as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(paging)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).async_paging as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(async_paging)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).overflow as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(overflow)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).exec_mode as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(exec_mode)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).tsx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(tsx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).vmcs as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(vmcs)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).async_vmcs as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(async_vmcs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).exstop as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(exstop)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).mwait as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(mwait)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).pwre as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(pwre)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).pwrx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(pwrx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).ptwrite as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(ptwrite)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).tick as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(tick)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).cbr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(cbr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event__bindgen_ty_1>())).mnt as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event__bindgen_ty_1),
            "::",
            stringify!(mnt)
        )
    );
}
#[test]
fn bindgen_test_layout_pt_event() {
    assert_eq!(
        ::std::mem::size_of::<pt_event>(),
        64usize,
        concat!("Size of: ", stringify!(pt_event))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_event>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_event))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).type_ as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).tsc as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(tsc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).lost_mtc as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(lost_mtc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).lost_cyc as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(lost_cyc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).reserved as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(reserved)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_event>())).variant as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_event),
            "::",
            stringify!(variant)
        )
    );
}
impl pt_event {
    #[inline]
    pub fn ip_suppressed(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_ip_suppressed(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn status_update(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_status_update(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn has_tsc(&self) -> u32 {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_has_tsc(&mut self, val: u32) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        ip_suppressed: u32,
        status_update: u32,
        has_tsc: u32,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let ip_suppressed: u32 = unsafe { ::std::mem::transmute(ip_suppressed) };
            ip_suppressed as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let status_update: u32 = unsafe { ::std::mem::transmute(status_update) };
            status_update as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let has_tsc: u32 = unsafe { ::std::mem::transmute(has_tsc) };
            has_tsc as u64
        });
        __bindgen_bitfield_unit
    }
}
extern "C" {
    #[doc = " Allocate an Intel PT query decoder."]
    #[doc = ""]
    #[doc = " The decoder will work on the buffer defined in \\@config, it shall contain"]
    #[doc = " raw trace data and remain valid for the lifetime of the decoder."]
    #[doc = ""]
    #[doc = " The decoder needs to be synchronized before it can be used."]
    pub fn pt_qry_alloc_decoder(config: *const pt_config) -> *mut pt_query_decoder;
}
extern "C" {
    #[doc = " Free an Intel PT query decoder."]
    #[doc = ""]
    #[doc = " The \\@decoder must not be used after a successful return."]
    pub fn pt_qry_free_decoder(decoder: *mut pt_query_decoder);
}
extern "C" {
    #[doc = " Synchronize an Intel PT query decoder."]
    #[doc = ""]
    #[doc = " Search for the next synchronization point in forward or backward direction."]
    #[doc = ""]
    #[doc = " If \\@decoder has not been synchronized, yet, the search is started at the"]
    #[doc = " beginning of the trace buffer in case of forward synchronization and at the"]
    #[doc = " end of the trace buffer in case of backward synchronization."]
    #[doc = ""]
    #[doc = " If \\@ip is not NULL, set it to last ip."]
    #[doc = ""]
    #[doc = " Returns a non-negative pt_status_flag bit-vector on success, a negative error"]
    #[doc = " code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if an unknown packet is encountered."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_eos if no further synchronization point is found."]
    #[doc = " Returns -pte_invalid if \\@decoder is NULL."]
    pub fn pt_qry_sync_forward(
        decoder: *mut pt_query_decoder,
        ip: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pt_qry_sync_backward(
        decoder: *mut pt_query_decoder,
        ip: *mut u64,
    ) -> ::std::os::raw::c_int;
}
